Fix scrollbars & scroll lock

--- a/rust/perspective-viewer/src/themes/pro.less
+++ b/rust/perspective-viewer/src/themes/pro.less
@@ -241,14 +241,5 @@ perspective-expression-editor {
     --toolbar-scroll-lock-active--content:  url("../svg/align-scroll-icon.svg");
     --toolbar-edit-mode--content: url("../svg/read-only-icon.svg");
     --toolbar-edit-mode-active--content:  url("../svg/editable-icon.svg");
-
-    // TODO add me back
-    regular-table::-webkit-scrollbar-thumb {
-        background-color: transparent;
-    }
-
-    regular-table:hover::-webkit-scrollbar-thumb {
-        background-color: #e0e4e9;
-    }
 }
 
